"add word and for testing publishing"

--- a/tutorials/Python_PreReq_Notebook.ipynb
+++ b/tutorials/Python_PreReq_Notebook.ipynb
@@ -39,7 +39,7 @@
     "    - If local has no new changes (or `is up to date`), the merge does not create new snapshot.\n",
     "    - Otherwise, changes will be automatically merged if there is no *conflict*, else you need to resolve the conflict. You will need to `commit` the merge result once this process finishes.\n",
     "      - Question: After `merge`, is the local and remote now synced? Why or why not?\n",
-    "  - `pull`: Shorthand for chaining `fetch` and `merge`\n",
+    "  - `pull`: Shorthand for chaining `fetch` and `merge` and \n",
     "  \n",
     "Graphical illustration:\n",
     "![gitoverview](../media/git-process.png)\n",
